--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     implementation 'org.netbeans.external:com-google-gson:RELEASE110'
     //必须使用
     implementation 'com.lzy.net:okgo:3.0.4'
+    implementation 'com.gyf.immersionbar:immersionbar:2.3.2-beta01'
 }
